# ltp

./: CMakeLists.txt
conf/: ltp.cnf
java/src/edu/hit/ir/ltpNative/: NerJNI.java  Pair.java  ParserJNI.java  PostagJNI.java  SegmentJNI.java  SplitSentenceJNI.java  SrlJNI.java
src/: CMakeLists.txt
src/__ltp_dll/: CMakeLists.txt  Ltp.cpp  Ltp.h
src/__xml4nlp/: Xml4nlp.cpp  Xml4nlp.h
src/_split_sentence/: CMakeLists.txt  edu_hit_ir_ltpNative_SplitSentenceJNI.h  split_sentence_jni.cpp
src/ner/: CMakeLists.txt  edu_hit_ir_ltpNative_NerJNI.h  ner_jni.cpp
src/parser/: CMakeLists.txt  ParserJNI.h  edu_hit_ir_ltpNative_ParserJNI.h  parser_jni.cpp  rulebase.h
src/postagger/: CMakeLists.txt  decoder.h  edu_hit_ir_ltpNative_PostagJNI.h  postag_jni.cpp
src/segmentor/: CMakeLists.txt  customized_segmentor.cpp  customized_segmentor.h  decoder.cpp  decoder.h  edu_hit_ir_ltpNative_SegmentJNI.h  featurespace.h  instance.h  model.cpp  options.h  parameter.h  rulebase.h  segment_dll.cpp  segment_dll.h  segment_jni.cpp  segmentor.cpp  segmentor.h  segmentreader.h
src/server/: CMakeLists.txt  ltp_server.cpp
src/srl/: CMakeLists.txt  DepSRL.cpp  SrlJNI.h  edu_hit_ir_ltpNative_SrlJNI.h  srl_jni.cpp
src/unittest/: CMakeLists.txt  engpattern_unittest.cpp
src/utils/: cache.hpp  smartmap.hpp  strutils.hpp
test/: customized_cws_cmdline.cpp
